<resources>
    <string name="prefs_file">net.goghu.elisa.PREFERENCE_FILE_KEY</string>
    <string name="app_name">Elisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">cristiamherrera@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">INICIO</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="form_nombre">Ingrese su Nombre</string>
    <string name="form_email">Ingrese su Email</string>
    <string name="form_direccion">Ingrese su Direccion</string>
    <string name="form_password">Ingrese su Password</string>
    <string name="btn_registrar">REGISTRAR</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="msg_registro">Ingrese sus Datos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>